RESOLVED FIXED64383
[Qt][WK2] Navigation actions in incorrect state when loadStarted() is emitted.
https://bugs.webkit.org/show_bug.cgi?id=64383
Summary [Qt][WK2] Navigation actions in incorrect state when loadStarted() is emitted.
Andreas Kling
Reported 2011-07-12 12:51:12 PDT
The navigation actions currently don't have their isEnabled() value updated until after loadStarted() is emitted.
Attachments
Proposed patch (3.71 KB, patch)
2011-07-12 12:56 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-07-12 12:56:04 PDT
Created attachment 100544 [details] Proposed patch
Kenneth Rohde Christiansen
Comment 2 2011-07-12 13:01:10 PDT
Comment on attachment 100544 [details] Proposed patch Good test
Andreas Kling
Comment 3 2011-07-12 13:25:28 PDT
Comment on attachment 100544 [details] Proposed patch Clearing flags on attachment: 100544 Committed r90844: <http://trac.webkit.org/changeset/90844>
Andreas Kling
Comment 4 2011-07-12 13:25:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.