[Qt][WK2] Navigation actions in incorrect state when loadStarted() is emitted. https://bugs.webkit.org/show_bug.cgi?id=64383

Reviewed by Kenneth Rohde Christiansen.

Update the navigation actions before emitting loadStarted().

* UIProcess/API/qt/tests/qdesktopwebview/tst_qdesktopwebview.cpp:
(LoadStartedCatcher::LoadStartedCatcher):
(LoadStartedCatcher::onLoadStarted):
(tst_QDesktopWebView::stopActionEnabledAfterLoadStarted):
* UIProcess/qt/ClientImpl.cpp:
(qt_wk_didStartProvisionalLoadForFrame):


Canonical link: https://commits.webkit.org/80108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90844 268f45cc-cd09-0410-ab3c-d52691b4dbfc